# sprint1

./: README.md  Sprint1_part3_intro_to_prompt_engineering.ipynb  env_template.txt  readme.md  requirements.txt  setup_notebook.py
.ipynb_checkpoints/: Sprint1_part3_intro_to_prompt_engineering-checkpoint.ipynb
part3/: .env  Sprint1_part3_intro_to_prompt_engineering.ipynb
part4/: .env  PROJECT_GUIDE.md  README.md  app.py  chat_handler.py  llm_provider.py  pyproject.toml  security.py  session_history.json  session_manager.py  system_prompts.py  ui_components.py
